docs/3.6.10/hub/v1alpha1/aiService.md
---
permalink: /3.6.10/hub/v1alpha1/aiService/
---

# hub.v1alpha1.aiService

"AIService is a Kubernetes-like Service to interact with a text-based LLM provider. It defines the parameters and credentials required to interact with various LLM providers."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`obj spec.anthropic`](#obj-specanthropic)
    * [`fn withModel(model)`](#fn-specanthropicwithmodel)
    * [`obj spec.anthropic.params`](#obj-specanthropicparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specanthropicparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specanthropicparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specanthropicparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specanthropicparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specanthropicparamswithtopp)
    * [`obj spec.anthropic.token`](#obj-specanthropictoken)
      * [`fn withSecretName(secretName)`](#fn-specanthropictokenwithsecretname)
  * [`obj spec.azureOpenai`](#obj-specazureopenai)
    * [`fn withBaseUrl(baseUrl)`](#fn-specazureopenaiwithbaseurl)
    * [`fn withDeploymentName(deploymentName)`](#fn-specazureopenaiwithdeploymentname)
    * [`fn withModel(model)`](#fn-specazureopenaiwithmodel)
    * [`obj spec.azureOpenai.apiKeySecret`](#obj-specazureopenaiapikeysecret)
      * [`fn withSecretName(secretName)`](#fn-specazureopenaiapikeysecretwithsecretname)
    * [`obj spec.azureOpenai.params`](#obj-specazureopenaiparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specazureopenaiparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specazureopenaiparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specazureopenaiparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specazureopenaiparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specazureopenaiparamswithtopp)
  * [`obj spec.bedrock`](#obj-specbedrock)
    * [`fn withModel(model)`](#fn-specbedrockwithmodel)
    * [`fn withRegion(region)`](#fn-specbedrockwithregion)
    * [`fn withSystemMessage(systemMessage)`](#fn-specbedrockwithsystemmessage)
    * [`obj spec.bedrock.params`](#obj-specbedrockparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specbedrockparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specbedrockparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specbedrockparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specbedrockparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specbedrockparamswithtopp)
  * [`obj spec.cohere`](#obj-speccohere)
    * [`fn withModel(model)`](#fn-speccoherewithmodel)
    * [`obj spec.cohere.params`](#obj-speccohereparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-speccohereparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-speccohereparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-speccohereparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-speccohereparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-speccohereparamswithtopp)
    * [`obj spec.cohere.token`](#obj-speccoheretoken)
      * [`fn withSecretName(secretName)`](#fn-speccoheretokenwithsecretname)
  * [`obj spec.deepSeek`](#obj-specdeepseek)
    * [`fn withBaseUrl(baseUrl)`](#fn-specdeepseekwithbaseurl)
    * [`fn withModel(model)`](#fn-specdeepseekwithmodel)
    * [`obj spec.deepSeek.params`](#obj-specdeepseekparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specdeepseekparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specdeepseekparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specdeepseekparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specdeepseekparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specdeepseekparamswithtopp)
    * [`obj spec.deepSeek.token`](#obj-specdeepseektoken)
      * [`fn withSecretName(secretName)`](#fn-specdeepseektokenwithsecretname)
  * [`obj spec.gemini`](#obj-specgemini)
    * [`fn withModel(model)`](#fn-specgeminiwithmodel)
    * [`obj spec.gemini.apiKey`](#obj-specgeminiapikey)
      * [`fn withSecretName(secretName)`](#fn-specgeminiapikeywithsecretname)
    * [`obj spec.gemini.params`](#obj-specgeminiparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specgeminiparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specgeminiparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specgeminiparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specgeminiparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specgeminiparamswithtopp)
  * [`obj spec.mistral`](#obj-specmistral)
    * [`fn withModel(model)`](#fn-specmistralwithmodel)
    * [`obj spec.mistral.apiKey`](#obj-specmistralapikey)
      * [`fn withSecretName(secretName)`](#fn-specmistralapikeywithsecretname)
    * [`obj spec.mistral.params`](#obj-specmistralparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specmistralparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specmistralparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specmistralparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specmistralparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specmistralparamswithtopp)
  * [`obj spec.ollama`](#obj-specollama)
    * [`fn withBaseUrl(baseUrl)`](#fn-specollamawithbaseurl)
    * [`fn withModel(model)`](#fn-specollamawithmodel)
    * [`obj spec.ollama.params`](#obj-specollamaparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specollamaparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specollamaparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specollamaparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specollamaparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specollamaparamswithtopp)
  * [`obj spec.openai`](#obj-specopenai)
    * [`fn withBaseUrl(baseUrl)`](#fn-specopenaiwithbaseurl)
    * [`fn withModel(model)`](#fn-specopenaiwithmodel)
    * [`obj spec.openai.params`](#obj-specopenaiparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specopenaiparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specopenaiparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specopenaiparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specopenaiparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specopenaiparamswithtopp)
    * [`obj spec.openai.token`](#obj-specopenaitoken)
      * [`fn withSecretName(secretName)`](#fn-specopenaitokenwithsecretname)
  * [`obj spec.qWen`](#obj-specqwen)
    * [`fn withBaseUrl(baseUrl)`](#fn-specqwenwithbaseurl)
    * [`fn withModel(model)`](#fn-specqwenwithmodel)
    * [`obj spec.qWen.params`](#obj-specqwenparams)
      * [`fn withFrequencyPenalty(frequencyPenalty)`](#fn-specqwenparamswithfrequencypenalty)
      * [`fn withMaxTokens(maxTokens)`](#fn-specqwenparamswithmaxtokens)
      * [`fn withPresencePenalty(presencePenalty)`](#fn-specqwenparamswithpresencepenalty)
      * [`fn withTemperature(temperature)`](#fn-specqwenparamswithtemperature)
      * [`fn withTopP(topP)`](#fn-specqwenparamswithtopp)
    * [`obj spec.qWen.token`](#obj-specqwentoken)
      * [`fn withSecretName(secretName)`](#fn-specqwentokenwithsecretname)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of AIService

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"The desired behavior of this AIService."

## obj spec.anthropic

"Anthropic configures Anthropic backend."

### fn spec.anthropic.withModel

```ts
withModel(model)
```



## obj spec.anthropic.params

"Params holds the LLM hyperparameters."

### fn spec.anthropic.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.anthropic.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.anthropic.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.anthropic.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.anthropic.params.withTopP

```ts
withTopP(topP)
```



## obj spec.anthropic.token

"SecretReference references a kubernetes secret."

### fn spec.anthropic.token.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.azureOpenai

"AzureOpenAI configures AzureOpenAI."

### fn spec.azureOpenai.withBaseUrl

```ts
withBaseUrl(baseUrl)
```



### fn spec.azureOpenai.withDeploymentName

```ts
withDeploymentName(deploymentName)
```



### fn spec.azureOpenai.withModel

```ts
withModel(model)
```



## obj spec.azureOpenai.apiKeySecret

"SecretReference references a kubernetes secret."

### fn spec.azureOpenai.apiKeySecret.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.azureOpenai.params

"Params holds the LLM hyperparameters."

### fn spec.azureOpenai.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.azureOpenai.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.azureOpenai.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.azureOpenai.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.azureOpenai.params.withTopP

```ts
withTopP(topP)
```



## obj spec.bedrock

"Bedrock configures Bedrock backend."

### fn spec.bedrock.withModel

```ts
withModel(model)
```



### fn spec.bedrock.withRegion

```ts
withRegion(region)
```



### fn spec.bedrock.withSystemMessage

```ts
withSystemMessage(systemMessage)
```



## obj spec.bedrock.params

"Params holds the LLM hyperparameters."

### fn spec.bedrock.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.bedrock.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.bedrock.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.bedrock.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.bedrock.params.withTopP

```ts
withTopP(topP)
```



## obj spec.cohere

"Cohere configures Cohere backend."

### fn spec.cohere.withModel

```ts
withModel(model)
```



## obj spec.cohere.params

"Params holds the LLM hyperparameters."

### fn spec.cohere.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.cohere.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.cohere.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.cohere.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.cohere.params.withTopP

```ts
withTopP(topP)
```



## obj spec.cohere.token

"SecretReference references a kubernetes secret."

### fn spec.cohere.token.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.deepSeek

"DeepSeek configures DeepSeek."

### fn spec.deepSeek.withBaseUrl

```ts
withBaseUrl(baseUrl)
```



### fn spec.deepSeek.withModel

```ts
withModel(model)
```



## obj spec.deepSeek.params

"Params holds the LLM hyperparameters."

### fn spec.deepSeek.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.deepSeek.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.deepSeek.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.deepSeek.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.deepSeek.params.withTopP

```ts
withTopP(topP)
```



## obj spec.deepSeek.token

"SecretReference references a kubernetes secret."

### fn spec.deepSeek.token.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.gemini

"Gemini configures Gemini backend."

### fn spec.gemini.withModel

```ts
withModel(model)
```



## obj spec.gemini.apiKey

"SecretReference references a kubernetes secret."

### fn spec.gemini.apiKey.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.gemini.params

"Params holds the LLM hyperparameters."

### fn spec.gemini.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.gemini.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.gemini.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.gemini.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.gemini.params.withTopP

```ts
withTopP(topP)
```



## obj spec.mistral

"Mistral configures Mistral AI backend."

### fn spec.mistral.withModel

```ts
withModel(model)
```



## obj spec.mistral.apiKey

"SecretReference references a kubernetes secret."

### fn spec.mistral.apiKey.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.mistral.params

"Params holds the LLM hyperparameters."

### fn spec.mistral.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.mistral.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.mistral.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.mistral.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.mistral.params.withTopP

```ts
withTopP(topP)
```



## obj spec.ollama

"Ollama configures Ollama backend."

### fn spec.ollama.withBaseUrl

```ts
withBaseUrl(baseUrl)
```



### fn spec.ollama.withModel

```ts
withModel(model)
```



## obj spec.ollama.params

"Params holds the LLM hyperparameters."

### fn spec.ollama.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.ollama.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.ollama.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.ollama.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.ollama.params.withTopP

```ts
withTopP(topP)
```



## obj spec.openai

"OpenAI configures OpenAI."

### fn spec.openai.withBaseUrl

```ts
withBaseUrl(baseUrl)
```



### fn spec.openai.withModel

```ts
withModel(model)
```



## obj spec.openai.params

"Params holds the LLM hyperparameters."

### fn spec.openai.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.openai.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.openai.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.openai.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.openai.params.withTopP

```ts
withTopP(topP)
```



## obj spec.openai.token

"SecretReference references a kubernetes secret."

### fn spec.openai.token.withSecretName

```ts
withSecretName(secretName)
```



## obj spec.qWen

"QWen configures QWen."

### fn spec.qWen.withBaseUrl

```ts
withBaseUrl(baseUrl)
```



### fn spec.qWen.withModel

```ts
withModel(model)
```



## obj spec.qWen.params

"Params holds the LLM hyperparameters."

### fn spec.qWen.params.withFrequencyPenalty

```ts
withFrequencyPenalty(frequencyPenalty)
```



### fn spec.qWen.params.withMaxTokens

```ts
withMaxTokens(maxTokens)
```



### fn spec.qWen.params.withPresencePenalty

```ts
withPresencePenalty(presencePenalty)
```



### fn spec.qWen.params.withTemperature

```ts
withTemperature(temperature)
```



### fn spec.qWen.params.withTopP

```ts
withTopP(topP)
```



## obj spec.qWen.token

"SecretReference references a kubernetes secret."

### fn spec.qWen.token.withSecretName

```ts
withSecretName(secretName)
```

